--- a/Reatil_sales_prediction_capstone_2.ipynb
+++ b/Reatil_sales_prediction_capstone_2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMzsmsXNhAb1BxgEJ11+dUB",
+      "authorship_tag": "ABX9TyNcljxnBDCV7MOR/GW241cP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -7620,297 +7620,12 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "XGboost Regression:"
+      ],
       "metadata": {
-        "id": "cXdr128pWCll"
+        "id": "rZEMzXR6pB9f"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# import the regressor\n",
-        "from lightgbm import LGBMRegressor\n",
-        "  \n",
-        "# create a regressor object\n",
-        "lgbmR = LGBMRegressor(boosting_type='gbdt', max_depth=120, learning_rate=0.1, n_estimators=500,  n_jobs=-1) \n",
-        "  \n",
-        "# fit the regressor with X and Y data\n",
-        "lgbmR.fit(X_train, y_train)\n",
-        "\n",
-        "# predict the model\n",
-        "y_train_lgbmR_pred= lgbmR.predict(X_train)\n",
-        "y_test_lgbmrR_pred= lgbmR.predict(X_test)"
-      ],
-      "metadata": {
-        "id": "PgZuEyod9469"
-      },
-      "execution_count": 96,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "## mean_absolute_error\n",
-        "MAE_train= mean_absolute_error(y_train,y_train_lgbmR_pred)\n",
-        "print(\"MAE on train is:\" ,MAE_train)\n",
-        "MAE_test= mean_absolute_error(y_test,y_test_lgbmrR_pred)\n",
-        "print(\"MAE on test is:\" ,MAE_test)\n",
-        "\n",
-        "\n",
-        "MSE_train= mean_squared_error(y_train,y_train_lgbmR_pred)\n",
-        "print(\"MSE on train is:\" ,MSE_train)\n",
-        "MSE_test= mean_squared_error(y_test,y_test_lgbmrR_pred)\n",
-        "print(\"MSE on test is:\" ,MSE_test)\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "RMSE_train=np.sqrt(MSE_train)\n",
-        "print(\"RMSE on train is:\" ,RMSE_train)\n",
-        "RMSE_test= np.sqrt(MSE_test)\n",
-        "print(\"RMSE on test is:\" ,RMSE_test)\n",
-        "\n",
-        "RPMSE_train=RMSE_train/sales_mean\n",
-        "print(\"RPMSE on train is:\" ,RPMSE_train)\n",
-        "RPMSE_test=RMSE_test/sales_mean \n",
-        "print(\"RPMSE on test is:\" ,RPMSE_test)\n",
-        "\n",
-        "\n",
-        "\n",
-        "r2_train= r2_score(y_train,y_train_lgbmR_pred)\n",
-        "print(\"r2  on train is:\" ,r2_train)\n",
-        "r2_test= r2_score(y_test,y_test_lgbmrR_pred)\n",
-        "print(\"r2 on test is:\" ,r2_test)\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "MQ262V1KTVol",
-        "outputId": "6ff90095-d878-40b3-9adf-e276bff183b6"
-      },
-      "execution_count": 140,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "MAE on train is: 345.71905364677315\n",
-            "MAE on test is: 349.2037481688579\n",
-            "MSE on train is: 258434.77739933968\n",
-            "MSE on test is: 270573.9554280038\n",
-            "RMSE on train is: 508.36480739655815\n",
-            "RMSE on test is: 520.1672379418026\n",
-            "RPMSE on train is: 0.08804654420842686\n",
-            "RPMSE on test is: 0.09009067316395099\n",
-            "r2  on train is: 0.982577279912521\n",
-            "r2 on test is: 0.981689193887007\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "pd.DataFrame(zip(y_test, y_test_lgbmrR_pred), columns = ['actual', 'pred'])"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 424
-        },
-        "id": "o8tssHtoT9dZ",
-        "outputId": "26827ebf-c9b4-438c-f983-dc9acabe8f73"
-      },
-      "execution_count": 141,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "        actual          pred\n",
-              "0         7285   7265.824845\n",
-              "1         6221   6414.995956\n",
-              "2         8132   8060.825757\n",
-              "3        20916  18979.755007\n",
-              "4         5472   5895.869200\n",
-              "...        ...           ...\n",
-              "203437    5650   6162.639011\n",
-              "203438    5464   5217.227137\n",
-              "203439    6191   6548.344485\n",
-              "203440    5663   5802.760467\n",
-              "203441    2698   2640.759142\n",
-              "\n",
-              "[203442 rows x 2 columns]"
-            ],
-            "text/html": [
-              "\n",
-              "  <div id=\"df-16de8c06-83db-45e6-9e2b-ed451680c4c6\">\n",
-              "    <div class=\"colab-df-container\">\n",
-              "      <div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>actual</th>\n",
-              "      <th>pred</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>0</th>\n",
-              "      <td>7285</td>\n",
-              "      <td>7265.824845</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>1</th>\n",
-              "      <td>6221</td>\n",
-              "      <td>6414.995956</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2</th>\n",
-              "      <td>8132</td>\n",
-              "      <td>8060.825757</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>3</th>\n",
-              "      <td>20916</td>\n",
-              "      <td>18979.755007</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>4</th>\n",
-              "      <td>5472</td>\n",
-              "      <td>5895.869200</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>...</th>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>203437</th>\n",
-              "      <td>5650</td>\n",
-              "      <td>6162.639011</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>203438</th>\n",
-              "      <td>5464</td>\n",
-              "      <td>5217.227137</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>203439</th>\n",
-              "      <td>6191</td>\n",
-              "      <td>6548.344485</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>203440</th>\n",
-              "      <td>5663</td>\n",
-              "      <td>5802.760467</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>203441</th>\n",
-              "      <td>2698</td>\n",
-              "      <td>2640.759142</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "<p>203442 rows × 2 columns</p>\n",
-              "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-16de8c06-83db-45e6-9e2b-ed451680c4c6')\"\n",
-              "              title=\"Convert this dataframe to an interactive table.\"\n",
-              "              style=\"display:none;\">\n",
-              "        \n",
-              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
-              "       width=\"24px\">\n",
-              "    <path d=\"M0 0h24v24H0V0z\" fill=\"none\"/>\n",
-              "    <path d=\"M18.56 5.44l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94zm-11 1L8.5 8.5l.94-2.06 2.06-.94-2.06-.94L8.5 2.5l-.94 2.06-2.06.94zm10 10l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94z\"/><path d=\"M17.41 7.96l-1.37-1.37c-.4-.4-.92-.59-1.43-.59-.52 0-1.04.2-1.43.59L10.3 9.45l-7.72 7.72c-.78.78-.78 2.05 0 2.83L4 21.41c.39.39.9.59 1.41.59.51 0 1.02-.2 1.41-.59l7.78-7.78 2.81-2.81c.8-.78.8-2.07 0-2.86zM5.41 20L4 18.59l7.72-7.72 1.47 1.35L5.41 20z\"/>\n",
-              "  </svg>\n",
-              "      </button>\n",
-              "      \n",
-              "  <style>\n",
-              "    .colab-df-container {\n",
-              "      display:flex;\n",
-              "      flex-wrap:wrap;\n",
-              "      gap: 12px;\n",
-              "    }\n",
-              "\n",
-              "    .colab-df-convert {\n",
-              "      background-color: #E8F0FE;\n",
-              "      border: none;\n",
-              "      border-radius: 50%;\n",
-              "      cursor: pointer;\n",
-              "      display: none;\n",
-              "      fill: #1967D2;\n",
-              "      height: 32px;\n",
-              "      padding: 0 0 0 0;\n",
-              "      width: 32px;\n",
-              "    }\n",
-              "\n",
-              "    .colab-df-convert:hover {\n",
-              "      background-color: #E2EBFA;\n",
-              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
-              "      fill: #174EA6;\n",
-              "    }\n",
-              "\n",
-              "    [theme=dark] .colab-df-convert {\n",
-              "      background-color: #3B4455;\n",
-              "      fill: #D2E3FC;\n",
-              "    }\n",
-              "\n",
-              "    [theme=dark] .colab-df-convert:hover {\n",
-              "      background-color: #434B5C;\n",
-              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
-              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
-              "      fill: #FFFFFF;\n",
-              "    }\n",
-              "  </style>\n",
-              "\n",
-              "      <script>\n",
-              "        const buttonEl =\n",
-              "          document.querySelector('#df-16de8c06-83db-45e6-9e2b-ed451680c4c6 button.colab-df-convert');\n",
-              "        buttonEl.style.display =\n",
-              "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
-              "\n",
-              "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-16de8c06-83db-45e6-9e2b-ed451680c4c6');\n",
-              "          const dataTable =\n",
-              "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
-              "                                                     [key], {});\n",
-              "          if (!dataTable) return;\n",
-              "\n",
-              "          const docLinkHtml = 'Like what you see? Visit the ' +\n",
-              "            '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
-              "            + ' to learn more about interactive tables.';\n",
-              "          element.innerHTML = '';\n",
-              "          dataTable['output_type'] = 'display_data';\n",
-              "          await google.colab.output.renderOutput(dataTable, element);\n",
-              "          const docLink = document.createElement('div');\n",
-              "          docLink.innerHTML = docLinkHtml;\n",
-              "          element.appendChild(docLink);\n",
-              "        }\n",
-              "      </script>\n",
-              "    </div>\n",
-              "  </div>\n",
-              "  "
-            ]
-          },
-          "metadata": {},
-          "execution_count": 141
-        }
-      ]
     },
     {
       "cell_type": "code",
