--- a/Reatil_sales_prediction_capstone_2.ipynb
+++ b/Reatil_sales_prediction_capstone_2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNcljxnBDCV7MOR/GW241cP",
+      "authorship_tag": "ABX9TyPJmeVJzUQAXOqEAuQuUesG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -164,6 +164,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Dataset top and bottiom view"
+      ],
+      "metadata": {
+        "id": "zv8HmD-EsTVL"
+      }
     },
     {
       "cell_type": "code",
@@ -592,6 +601,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Dataset shape"
+      ],
+      "metadata": {
+        "id": "U7U6erYDsN4s"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "Rossmann_df.shape"
@@ -616,6 +634,15 @@
           "execution_count": 6
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Dataset Information "
+      ],
+      "metadata": {
+        "id": "Pv6aKv9rsGSH"
+      }
     },
     {
       "cell_type": "code",
@@ -891,6 +918,15 @@
           "execution_count": 8
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Checking for null values"
+      ],
+      "metadata": {
+        "id": "vMYaByztsjcM"
+      }
     },
     {
       "cell_type": "code",
@@ -1270,10 +1306,19 @@
     {
       "cell_type": "markdown",
       "source": [
-        "store analysis"
+        "**store analysis**"
       ],
       "metadata": {
         "id": "sw1uayaTl6ov"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "top and bottom view"
+      ],
+      "metadata": {
+        "id": "GC662wY_svqx"
       }
     },
     {
@@ -1729,6 +1774,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "store information"
+      ],
+      "metadata": {
+        "id": "Ydwr5sJGszZa"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "store_df.info()"
@@ -2114,7 +2168,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 868
+          "height": 908
         },
         "id": "vi1jNCmDqHRH",
         "outputId": "b7ce2eca-874b-4010-8759-a97febfc5a48"
@@ -7766,7 +7820,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "We have chosen **XGboost** as our final prediction model as it is very clear from   **maximum r2 score(0.91)**   on the testing dataset among all other models"
+        "We have chosen **XGboost** as our final prediction model as it is very clear from   **maximum r2 score(0.91)**   and least **RPMSE** Value on the testing dataset among all other models"
       ],
       "metadata": {
         "id": "3ZZj4vFflgto"
